--- a/docs/tex/4-projekt-eksperymentow.tex
+++ b/docs/tex/4-projekt-eksperymentow.tex
@@ -1,31 +1,33 @@
 \clearpage % Rozdziały zaczynamy od nowej strony.
 \section{Projekt eksperymentów}
 
+Cel: Szczegółowe przedstawienie projektu eksperymentów mających na celu ocenę zdolności dużych modeli językowych (LLM) do automatycznego generowania konfiguracji Infrastructure as Code (IaC) dla środowisk Docker i Kubernetes.
+
+Proponowana zawartość:
+
+\textbf{Cel i hipotezy badawcze:}
+Sformułowanie głównego celu eksperymentów.
+Wypunktowanie konkretnych hipotez badawczych do weryfikacji.
+\textbf{Zestawienie przypadków testowych:}
+Opis 4 spreparowanych repozytoriów, reprezentujących różne scenariusze wdrożeniowe:
+Aplikacja bezstanowa bez zależności.
+Aplikacja wykorzystująca stanową bazę danych postawioną obok.
+Frontend + Backend + Baza Danych.
+Prosty system mikroserwisowy.
+Zostawienie miejsca na wspomnienie o ewentualnym wykorzystaniu dodatkowych repozytoriów z serwisu GitHub w celu przetestowania działania na "niespreparowanych" aplikacjach.
+\textbf{Metodyka generacji i promptowania:}
+Szczegółowy opis, że metodą promptowania będzie agent napisany w LangGraph.
+Miejsce na wykorzystywany prompt (listing lub szczegółowy opis struktury).
+Miejsce na opis narzędzi (funkcji), które będą dostępne dla agenta i które będzie mógł wykorzystać (np. do czytania plików, walidacji składni, itp.).
+\textbf{Proces testowy:}
+Szczegółowy schemat działania agenta i następującego po nim procesu oceny: \begin{enumerate} \item Przygotowanie środowiska roboczego (working directory). \item Sklonowanie repozytorium aplikacji. \item Generowanie Dockerfile (lub wielu, w zależności od architektury) przez agenta LLM. \item Generowanie manifestów Kubernetes przez agenta LLM. \end{enumerate}
+W tym momencie kończy się rola generowania przez agenta, a zaczyna rola automatycznej oceny modelu (jakość generacji): \begin{enumerate}[resume] \item Weryfikacja syntaktycznej poprawności wygenerowanego Dockerfile. \item Statyczna analiza Dockerfile za pomocą Hadolint (sprawdzenie "prucia się" Hadolint). \item Próba budowy obrazu Docker na podstawie wygenerowanego Dockerfile. \item Weryfikacja syntaktycznej poprawności wygenerowanych manifestów Kubernetes. \item Statyczna analiza manifestów Kubernetes za pomocą Kube-linter (sprawdzenie "prucia się" Kube-linter). \item Próba zaaplikowania manifestów Kubernetes w środowisku Kind. \item Walidacja działania aplikacji w środowisku Kubernetes (walidacja runtime). \item Ocena jakości konfiguracji pod kątem dobrych praktyk (np. poprzez interpretację wyników statycznej analizy). \end{enumerate}
+\textbf{Kryteria oceny i metryki:}
+Definicja kryteriów jakości IaC (poprawność składniowa/funkcjonalna, bezpieczeństwo, kompletność, deterministyczność, odporność na manipulacje, wydajność generacji).
+Wskazanie, jakie metryki będą używane do pomiaru każdego kryterium.
+\textbf{Przykładowe obserwacje i napotkane problemy:}
+Omówienie ogólnego zachowania modeli LLM podczas generacji.
+Analiza typowych problemów napotkanych podczas eksperymentów (np. ograniczenia tokenów, błędy w kontekście, wpływ długości promptów, deterministyczność).
+Wyniki szczegółowe zostaną zaprezentowane w kolejnym rozdziale.
+
 TODO
-
-% kryteria oceny tutaj czy w nastepnym?
-
-% tu chyba napisac w jaki sposob to odpalam, ze agent, ze langsmith itd
-
-
-
-% TODO to tylko fragment o closed feedback loopie z static analyzerami:
-
-% 4.X. Podejście agentowe z pętlą sprzężenia zwrotnego (Feedback Loop)
-
-% W celu maksymalizacji jakości i bezpieczeństwa generowanych konfiguracji, w badaniu zostanie zaimplementowane podejście agentowe wykorzystujące mechanizm zamkniętej pętli sprzężenia zwrotnego. Koncepcja ta zakłada iteracyjne udoskonalanie wygenerowanego kodu na podstawie automatycznie pozyskiwanego feedbacku z narzędzi do statycznej analizy i walidacji IaC.
-
-% Proces będzie przebiegał następująco:
-
-% Generacja początkowa: Wybrany model LLM (wykorzystując techniki promptowania takie jak zero-shot lub few-shot) wygeneruje wstępną konfigurację Dockerfile lub manifestu Kubernetes na podstawie zadanego promptu.
-% Walidacja i analiza: Wygenerowany kod zostanie automatycznie przekazany do zestawu narzędzi walidacyjnych i analitycznych, takich jak Checkov, Kube-score i Kube-linter. Narzędzia te ocenią kod pod kątem poprawności składniowej, zgodności z najlepszymi praktykami oraz potencjalnych luk bezpieczeństwa i niezoptymalizowanych ustawień.
-% Pozyskiwanie feedbacku: Wyniki analizy (np. lista wykrytych "violations" lub zaleceń) zostaną przetworzone i sformatowane w sposób zrozumiały dla LLM.
-% Iteracyjna korekta: Przetworzony feedback zostanie przekazany z powrotem do LLM jako rozbudowany prompt, instruujący model do dokonania korekt w początkowej konfiguracji. Proces ten będzie powtarzany w celu zmniejszenia liczby wykrytych problemów lub osiągnięcia zdefiniowanego progu jakości.
-% Kryteria zatrzymania: Pętla sprzężenia zwrotnego zostanie przerwana po osiągnięciu maksymalnej liczby iteracji (np. 3-5 iteracji) lub gdy liczba wykrytych naruszeń spadnie poniżej ustalonego poziomu (np. brak krytycznych błędów bezpieczeństwa).
-% W ramach eksperymentów, kluczowe będzie zmierzenie początkowej liczby naruszeń (violations) generowanych przez LLM bez feedbacku oraz dynamiki ich redukcji w kolejnych iteracjach z wykorzystaniem pętli sprzężenia zwrotnego. Pozwoli to na ocenę efektywności podejścia agentowego i zdolności LLM do samodzielnej korekty kodu na podstawie zewnętrznych walidatorów. Badanie to pozwoli również zidentyfikować typy błędów, które są najłatwiejsze i najtrudniejsze do skorygowania automatycznie.
-
-% Uzasadnienie umieszczenia tu:
-
-% Projektowanie: Opisujesz, jak zaprojektujesz swoje eksperymenty, w tym innowacyjną metodę z feedback loop.
-% Klarowność: Oddzielenie tego w osobnym podrozdziale w "Projekcie eksperymentów" podkreśla jego znaczenie i pozwala na szczegółowe omówienie.
-% Wprowadzenie metryk: Już na etapie projektu eksperymentów określasz, co będziesz mierzyć (początkowe violations, redukcja, liczba iteracji), co jest spójne z metodologią naukową.
