--- a/docs/tex/4-projekt-eksperymentow.tex
+++ b/docs/tex/4-projekt-eksperymentow.tex
@@ -30,4 +30,8 @@ Omówienie ogólnego zachowania modeli LLM podczas generacji.
 Analiza typowych problemów napotkanych podczas eksperymentów (np. ograniczenia tokenów, błędy w kontekście, wpływ długości promptów, deterministyczność).
 Wyniki szczegółowe zostaną zaprezentowane w kolejnym rozdziale.
 
+TODO napisac ze wszystkie modele dostaja ten sam prompt i sa testowane na tych samych repozytoriach, a wyniki sa porownywane miedzy nimi.
+
+TODO co bedzie mierzone i jak? (np langsmith), np. liczba tokenow wejsciowych, wyjsciowych, liczba przeczytanych plikow, liczba wylistowan plikow, liczbe bledow statycznej analizy itd
+
 TODO
